# neurofocus_smart_tank

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  MONGODB_SETUP.md  README.md  dedalus.yaml  env.example  example_usage.py  file_handlers.py  fix_uv.sh  main.py  mongod.conf  pyproject.toml  requirements.txt  server.py  setup.sh  setup_mongodb.bat  setup_mongodb.ps1  test_server.py
