[project]
name = "neurofocus_smart_tank"
version = "1.0.0"
description = "MCP server for serving and querying documentation"
requires-python = ">=3.10"
dependencies = [
    "openmcp>=0.1.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
main = "src.main:main"